part1/1.11/manifests/mainappservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainapp-svc
spec:
  type: ClusterIP
  selector:
    app: mainapp
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 5000
