part1/1.11/manifests/pongservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
  - port: 1234
    protocol: TCP
    targetPort: 3000
